lustre/tests/conf-sanity.sh
@@ -4758,6 +4758,8 @@ test_66() {
 	echo "wrong nids list should not destroy the system"
 	do_facet mgs $LCTL replace_nids $FSNAME-OST0000 "wrong nids list" &&
 		error "wrong parse"
+	do_facet mgs $LCTL replace_nids $FSNAME-OST0000 "asdfasdf, asdfadf" &&
+		error "wrong parse"
 
 	echo "replace OST nid"
 	do_facet mgs $LCTL replace_nids $FSNAME-OST0000 $OST1_NID ||
@@ -4770,6 +4772,14 @@ test_66() {
 	echo "wrong nids list should not destroy the system"
 	do_facet mgs $LCTL replace_nids $FSNAME-MDT0000 "wrong nids list" &&
 		error "wrong parse"
+
+	local FAKE_NIDS="192.168.0.112@tcp1,192.168.0.112@tcp2"
+	local FAKE_FAILOVER="192.168.0.113@tcp1,192.168.0.113@tcp2"
+	local NIDS_AND_FAILOVER="$MDS_NID,$FAKE_NIDS:$FAKE_FAILOVER"
+	echo "set NIDs with failover"
+	do_facet mgs $LCTL replace_nids $FSNAME-MDT0000 $NIDS_AND_FAILOVER ||
+		error "replace nids failed"
+
 
 	echo "replace MDS nid"
 	do_facet mgs $LCTL replace_nids $FSNAME-MDT0000 $MDS_NID ||
@@ -8265,6 +8275,36 @@ test_123() {
 	do_facet mgs rm "$yaml_file"
 }
 run_test 123 "clear and reset all parameters using set_param -F"
+
+test_124()
+{
+	[ $MDSCOUNT -lt 2 ] && skip "needs >= 2 MDTs" && return
+	[ -z $mds2failover_HOST ] && skip "needs MDT failover setup" && return
+
+	setup
+	cleanup
+
+	load_modules
+	if combined_mgs_mds; then
+		start_mdt 1 "-o nosvc" ||
+			error "starting mds with nosvc option failed"
+	fi
+	local nid=$(do_facet mds2 $LCTL list_nids | head -1)
+	local failover_nid=$(do_node $mds2failover_HOST $LCTL list_nids | head -1)
+	do_facet mgs $LCTL replace_nids $FSNAME-MDT0001 $nid:$failover_nid ||
+		error "replace_nids execution error"
+
+	if combined_mgs_mds; then
+		stop_mdt 1
+	fi
+
+	setup
+	fail mds2
+	echo "lfs setdirstripe"
+	$LFS setdirstripe -i 1 $MOUNT/$tdir || error "setdirstirpe error"
+	echo ok
+}
+run_test 124 "check failover after replace_nids"
 
 if ! combined_mgs_mds ; then
 	stop mgs
